--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "@tailwindcss/vite": "^4.0.6",
     "firebase": "^11.3.1",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
@@ -26,13 +25,14 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.23",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.1.0"
   }
 }
