--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@google/generative-ai": "^0.21.0",
     "firebase": "^11.3.1",
     "js-cookie": "^3.0.5",
+    "peer": "^1.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.4"
   },
   "devDependencies": {
